# qtm

./: .gitignore  NH3_catalyst.ipynb  NH3_catalyst.py  NH3_catalyst_no_jax.ipynb  NH3_catalyst_no_jax.py  README.md  Structure2D_COMPOUND_CID_123329.sdf  animation.ipynb  hamiltonian_builder.py  mvp.ipynb  nh3_without_catalyst.ipynb  pyproject.toml  requirements.txt  ruff.toml  run.py
artifact/step1/: coords.txt  energies.txt
artifact/step2/: coords.txt  coords_bo.txt  energies.txt  energies_bo.txt
qtm/: chem_config.py  chem_config.yaml  hamiltonian_builder.py  homogeneous_transformation.py  homogenous_transformation.py  itertools_helper.py  ml_conf.yaml  ml_config.yaml  reaction.py  run.py
qtm/optmizer/: bayesian_optimizer.py
scripts/: last_frame_delay.sh  timebox.sh
tests/: molecule_pyscf_sto-3g.hdf5  test_hamiltonian_builder.py  test_homogenous_transformation.py
